[package]
name = "wgpu-transparency"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
glam = { version = "0.30.6", features = ["bytemuck"] }
pollster = "0.4.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "6819904"}
winit = { git = "https://github.com/n1ght-hunter/winit.git", rev = "06bf39c" }
